@@ -9,6 +9,7 @@ import com.wassupshoppingmall.domain.product.entity.Product;
 import com.wassupshoppingmall.domain.product.repository.ProductRepository;
 import com.wassupshoppingmall.domain.user.entity.User;
 import com.wassupshoppingmall.domain.user.repository.UserRepository;
+import com.wassupshoppingmall.global.auth.AuthService;
 import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -21,13 +22,10 @@ import java.util.stream.Collectors;
 public class CartService {
     private final CartRepository cartRepository;
     private final ProductRepository productRepository;
-    private final UserRepository userRepository;
+    private final AuthService authService;
 
-    public List<CartResponse> getCartItems(HttpSession session) {
-        Long userId = (Long) session.getAttribute("userId");
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
-
+    public List<CartResponse> getCartItems() {
+        User user = authService.getLoginUser();
         return cartRepository.findByUser(user).stream()
                 .map(c -> new CartResponse(
                         c.getId(),
@@ -36,16 +34,16 @@ public class CartService {
                         c.getQuantity(),
                         c.getProduct().getPrice()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void addToCart(CartRequest request, HttpSession session) {
-        Long userId = (Long) session.getAttribute("userId");
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다"));
+    public void addToCart(CartRequest request) {
+        User user = authService.getLoginUser();
+
         Product product = productRepository.findById(request.getProductId())
                 .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다"));
 
+        //이미 장바구니에 있으면 수량만 업데이트
         Cart cart = cartRepository.findByUserAndProduct_Id(user, request.getProductId())
                 .orElseGet(() -> {
                             Cart newCart = new Cart();
@@ -57,12 +55,12 @@ public class CartService {
                 );
     }
 
-    public void updateCartItem(Long cartId, int quantity, HttpSession session) {
-        Long userId = (Long) session.getAttribute("userId");
+    public void updateCartItem(Long cartId, int quantity) {
+        User user = authService.getLoginUser();
         Cart cart = cartRepository.findById(cartId)
                 .orElseThrow(() -> new IllegalArgumentException("장바구니 항목을 찾을 수 없습니다"));
 
-        if (!cart.getUser().getId().equals(userId)) {
+        if (!cart.getUser().getId().equals(user.getId())) {
             throw new IllegalArgumentException("본인 장바구니만 수정할 수 있습니다");
         }
         cart.setQuantity(quantity);
@@ -70,12 +68,12 @@ public class CartService {
 
     }
 
-    public void deleteCartItem(Long cartId, HttpSession session) {
-        Long userId = (Long) session.getAttribute("userId");
+    public void deleteCartItem(Long cartId) {
+        User user = authService.getLoginUser();
         Cart cart = cartRepository.findById(cartId)
                 .orElseThrow(() -> new IllegalArgumentException("장바구니 항목을 찾을 수 없습니다"));
 
-        if (!cart.getUser().getId().equals(userId)) {
+        if (!cart.getUser().getId().equals(user.getId())) {
             throw new IllegalArgumentException("본인 장바구니만 삭제할 수 있습니다");
         }
         cartRepository.delete(cart);
